@@ -12,7 +12,8 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-core:1.3'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    compile group: 'org.controlsfx', name: 'controlsfx', version: '8.0.5'
+    //compile group: 'org.controlsfx', name: 'controlsfx', version: '8.0.5'
+    // https://mvnrepository.com/artifact/com.jfoenix/jfoenix
     compile 'com.jfoenix:jfoenix:9.0.10'
 }
 
@@ -32,4 +33,14 @@ jar {
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+}
+
+run{
+    jvmArgs = [
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--illegal-access=warn"
+    ]
 }
